--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -25,6 +25,12 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "applicationUrl": "http://localhost:7001"
+    },
+    "Docker": {
+      "commandName": "Docker",
+      "launchBrowser": true,
+      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/Feedback/Ping",
+      "publishAllPorts": true
     }
   }
 }
